--- a/registro.html
+++ b/registro.html
@@ -7,32 +7,34 @@
     <link rel="stylesheet" href="/assets/global.css">
 </head>
 <body>
-    <form action="post" class="main-login">
-        <div class="left-login">
-            <h1>Cadastre-se</h1>
-            <h1>Cadastre-se</h1>
-        </div>
-        <div class="right-login">
-            <div class="card-login">
-            <h1>LOGIN</h1>
-                <div class="textfield">
-                    <label for="nome">nome</label>
-                    <input type="text" name="nome" placeholder="nome">
-                </div>
-                <div class="textfield">
-                    <label for="email">email</label>
-                    <input type="email" name="email" placeholder="email">
-                </div>
-                <div class="textfield">
-                    <label for="senha">senha</label>
-                    <input type="password" name="senha" placeholder="senha">
-                </div>
-                <div class="textfield">
-                    <input type="date" name="nome">
-                </div>
-                <button class="btn-login">Login</button>
-            </div>
-        </div>
-    </form>  
+    <main>
+        <form action="post" class="main-login">
+            <h1 id="title-login">LOGIN</h1><br>
+            <input type="email" class="input-login" placeholder="login" id="email">
+            <br>
+            <input type="password" class="input-login" placeholder="senha" id="password">
+            <br>
+            <input type="submit" class="input-login" id="enviar" onclick="logar(); return false">
+            <!--<a href="Inicio.html"><button> Entrar</button></a>-->
+            <br>
+            <h4 id="question">Não tem uma conta? <span><a href="cadastro.html">Cadastre-se</a></span></h4>    
+        </form>
+    </main>
+    <script>
+        function logar(){
+            var login = document.getElementById('login').value;
+            var senha = document.getElementById('senha').value;
+
+            if(login == "alex" && senha == "alex123"){
+                alert('Sucesso');
+                location.href = "Inicio.html";
+            }else{
+                alert('Usuario ou senha incorretos')
+            }
+            }
+    </script>
+    </main>
+</body>
+
 </body>
 </html>
