--- a/inicio.html
+++ b/inicio.html
@@ -5,15 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/inicio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    integrity="sha384-G0IWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1btIQ6MLJuhea09">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="%">Cursos</a> </li>
-            <li><a href="%">Professores</a> </li>
-            <li><a href="%">Contato</a></li>
-            <li><a href="%">Nossa Historia</a></li>
+    <header>
+        <a href="#"><img src="" alt="Logo"></a>
+        <nav>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Cursos</a></li>
+            <li><a href="#">Contato</a></li>
+        </nav>
+    </header>
+    <section class="hero">
+        <h1>Conheça nossa unidade</h1>
+        <h3>Diveros tipos de instrumentos para você se especializar</h3>
+        <a href="" class="btn">Saiba mais</a>
+    </section>
+    <section class="conheca-a-escola">
+        <h3>Conheça a <span>NOME DA ESCOLA</span></h3>
+        <p>Feche seus olhos e imagine um lugar onde você possa apreciar o som
+            e aprender, um lugar de tranquilidade, paz aprendizado
+        </p>
+        <hr>
+        <ul class="grid">
+            <li class="small" style="background-image: url(img/bateria.jpg)"></li>
+            <li class="large" style="background-image: url(img/flauta.jpg)"></li>
+            <li class="large" style="background-image: url(img/teclado.jpg)"></li>
+            <li class="small" style="background-image: url(img/violao.jpg)"></li>
         </ul>
-    </nav>
+    </section>
+    <section class="caracteristicas">
+        <h3>A escola que traz a paixão da música para dentro de você</h3>
+        <p>Situada em uma área completamente arborizada, a Escola de Música Harmonia é a única
+        na região de São Paulo. Aqui, a música será a sua companheira e você terá as belezas da natureza como inspiração. Venha aprender e criar em um verdadeiro paraíso musical.</p>
+        <hr>
+        <ul class="grid">
+            <li>
+                <img src="img/location.png" alt="">
+                <h4>Localização</h4>
+                <p>Localizada no coração de São Paulo, nossa escola de música oferece um ambiente
+                vibrante e diversificado. A cidade, conhecida como a capital cultural do Brasil, proporciona acesso a uma vasta gama de recursos artísticos e musicais, além de eventos e apresentações que ocorrem ao longo do ano. Venha se inspirar na energia única de São Paulo e descobrir o seu talento musical em um cenário urbano dinâmico e estimulante.</p>
+            </li>
+            <li>
+                <img src="img/gift.png" alt="">
+                <h4>Pacotes e Ofertas</h4>
+                <p>Sabe aquele descontraído encontro com a família e amigos? Ou o momento relax? Nossa escola de música oferece uma diversidade de espaços que proporcionam momentos inesquecíveis.
+                Venha explorar salas de aula acolhedoras, áreas de prática inspiradoras e locais para apresentações vibrantes, tudo pensado para tornar sua experiência musical única e memorável.
+            <li>
+                <img src="img/house.png" alt="">
+                <h4>Aulas Online</h4>
+                <p>Descubra uma nova maneira de aprender música com nossas aulas online! Deixe-se envolver pela magia da música no conforto do seu lar. Com instrutores apaixonados e uma plataforma interativa,
+                nossas aulas oferecem uma experiência única e dinâmica, permitindo que você desenvolva suas habilidades musicais no seu próprio ritmo. Não importa onde você esteja, a música está apenas a um clique de distância. Junte-se a nós e embarque nessa jornada musical online!</p>
+            </li>
+        </ul>
+    </section>
+    <section class="newsletter">
+        <h3>Assine nossa newletter para se manter atualizado com nossos serviços e a programação de nossa viagens culturais</h3>
+        <p>Assine</p>
+        <hr>
+        <form>
+            <input type="text" placeholder="Email">
+            <button>Cadastrar</button>
+        </form>
+    </section>
+    <footer>
+        <ul>
+            <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href=""><i class="fab fa-instagram"></i></i></i></a></li>
+            <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+        </ul>
+        <p>Todos os direitos reservados - "NOME DA ESCOLA" 2024</p>
+    </footer>
 </body>
 </html>
