--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/inicio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     integrity="sha384-G0IWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1btIQ6MLJuhea09">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,18 +47,18 @@
         <hr>
         <ul class="grid">
             <li>
-                <img src="img/location.png" alt="">
+                <i class="fas fa-map-marker-alt"></i>
                 <h4>Localização</h4>
                 <p>Localizada no coração de São Paulo, nossa escola de música oferece um ambiente
                 vibrante e diversificado. A cidade, conhecida como a capital cultural do Brasil, proporciona acesso a uma vasta gama de recursos artísticos e musicais, além de eventos e apresentações que ocorrem ao longo do ano. Venha se inspirar na energia única de São Paulo e descobrir o seu talento musical em um cenário urbano dinâmico e estimulante.</p>
             </li>
             <li>
-                <img src="img/gift.png" alt="">
+                <i class="fas fa-gift"></i>
                 <h4>Pacotes e Ofertas</h4>
                 <p>Sabe aquele descontraído encontro com a família e amigos? Ou o momento relax? Nossa escola de música oferece uma diversidade de espaços que proporcionam momentos inesquecíveis.
                 Venha explorar salas de aula acolhedoras, áreas de prática inspiradoras e locais para apresentações vibrantes, tudo pensado para tornar sua experiência musical única e memorável.
             <li>
-                <img src="img/house.png" alt="">
+                <i class="fas fa-home"></i>
                 <h4>Aulas Online</h4>
                 <p>Descubra uma nova maneira de aprender música com nossas aulas online! Deixe-se envolver pela magia da música no conforto do seu lar. Com instrutores apaixonados e uma plataforma interativa,
                 nossas aulas oferecem uma experiência única e dinâmica, permitindo que você desenvolva suas habilidades musicais no seu próprio ritmo. Não importa onde você esteja, a música está apenas a um clique de distância. Junte-se a nós e embarque nessa jornada musical online!</p>
@@ -65,8 +66,8 @@
         </ul>
     </section>
     <section class="newsletter">
-        <h3>Assine nossa newletter para se manter atualizado com nossos serviços e a programação de nossa viagens culturais</h3>
-        <p>Assine</p>
+        <h3>Assine</h3>
+        <p>Assine nossa --------- para se manter atualizado com nossos serviços e a programação de nossa aulas extras</p>
         <hr>
         <form>
             <input type="text" placeholder="Email">
