--- a/inicio.html
+++ b/inicio.html
@@ -11,10 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="img/favicon_transparent_32x32.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="#"><img src="" alt="Logo"></a>
+        <a href="#"><img src="img/Design sem nome.png" alt="Logo"></a>
         <nav>
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
@@ -28,7 +29,7 @@
         <a href="" class="btn">Saiba mais</a>
     </section>
     <section class="conheca-a-escola">
-        <h3>Conheça a <span>NOME DA ESCOLA</span></h3>
+        <h3>Conheça a <span>Harmony school</span></h3>
         <p>Feche seus olhos e imagine um lugar onde você possa apreciar o som
             e aprender, um lugar de tranquilidade, paz aprendizado
         </p>
@@ -42,7 +43,7 @@
     </section>
     <section class="caracteristicas">
         <h3>A escola que traz a paixão da música para dentro de você</h3>
-        <p>Situada em uma área completamente arborizada, a Escola de Música Harmonia é a única
+        <p>Situada em uma área completamente arborizada, a Escola de Música Harmony é a única
         na região de São Paulo. Aqui, a música será a sua companheira e você terá as belezas da natureza como inspiração. Venha aprender e criar em um verdadeiro paraíso musical.</p>
         <hr>
         <ul class="grid">
@@ -71,7 +72,7 @@
         <hr>
         <form>
             <input type="text" placeholder="Email">
-            <button>Cadastrar</button>
+            <button> <a href="cadastro.html">Cadastrar</a></button>
         </form>
     </section>
     <footer>
@@ -81,7 +82,7 @@
             <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
             <li><a href=""><i class="fa-brands fa-github"></i></a></li>
         </ul>
-        <p>Todos os direitos reservados - "NOME DA ESCOLA" 2024</p>
+        <p>Todos os direitos reservados - Harmony School 2024</p>
     </footer>
 </body>
 </html>
