--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <form method="post">
                 <input type="text" name="nome" placeholder="nome de usuario" autofocus>
                 <input type="password" name="senha" placeholder="sua senha" autofocus>
-                <input type="submit" value="Entrar" style="background-color: rgb(28, 118, 208);
+                <input type="submit" value="Entrar" style="background-color: #660708;;
                 display: block;font-size: 20px; text-transform: uppercase; font-weight: bold; cursor: pointer;">
             </form>
             <p>Ainda não tem conta? <a href="cadastro.html">Cadastre-se</a></p>
