--- a/inicio.html
+++ b/inicio.html
@@ -17,10 +17,10 @@
     <header>
         <a href="#"><img src="img/Design sem nome.png" alt="Logo"></a>
         <nav>
-            <li><a href="#">Home</a></li>
+            <li><a href="inicio.html">Home</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">Cursos</a></li>
+            <li><a href="cursos.html    ">Cursos</a></li>
             <li><a href="#">Contato</a></li>
         </nav>
     </header>
