--- a/cursos.html
+++ b/cursos.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/global.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" href="img/favicon_transparent_32x32.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -33,17 +34,36 @@
             Maiores repellat id a commodi unde cumque corrupti delectus saepe atque? Perferendis harum dolor,
             tenetur voluptate laboriosam sed doloribus provident error sit.</h3>
         </div>
-        <ul class="grid">
-            <li class="div2" style="background-image: url(img/bateria.jpg)"></li>
-            <li class="div1" style="background-image: url(img/flauta.jpg)"></li>
-            <li class="large" style="background-image: url(img/teclado.jpg)"></li>
-            <li class="div2" style="background-image: url(img/teclado.jpg)"></li>
-            <li class="div1" style="background-image: url(img/violao.jpg)"></li>
-            <li class="large" style="background-image: url(img/flauta.jpg)"></li>
-            <li class="div2" style="background-image: url(img/bateria.jpg)"></li>
-            <li class="div1" style="background-image: url(img/violao.jpg)"></li>
-            <li class="large" style="background-image: url(img/bateria.jpg)"></li>
+        <ul class="grid" style="background-image: url(img/cursos/madeira-empe.jpg);">
+            <div class="up" style="background-image: url(img/cursos/flauta.jpg);"></div>
+            <div class="up" style="background-image: url(img/cursos/guitarra.jpg);"></div>
+            <div class="up" style="background-image: url(img/cursos/piano.jpg);"></div>
+            <div class="up" style="background-image: url(img/cursos/sanfona.jpg);"></div>
+            <div class="down" style="background-image: url(img/cursos/saxofone.jpg);"></div>
+            <div class="down" style="background-image: url(img/cursos/vibra_slap.jpg);"></div>
+            <div class="down" style="background-image: url(img/cursos/violino.jpg);"></div>
+            <div class="down" style="background-image: url(img/cursos/violão.jpg);"></div>
         </ul>
     </section>
+    <section class="newsletter">
+        <h3>Assine</h3>
+        <p>Assine nossa --------- para se manter atualizado com nossos serviços e a programação de nossa aulas extras</p>
+        <hr>
+        <form>
+            <input type="text" placeholder="Email">
+            <button> <a href="cadastro.html">Cadastrar</a></button>
+        </form>
+    </section>
+    <footer>
+        <ul>
+            <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href=""><i class="fab fa-instagram"></i></i></i></a></li>
+            <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+        </ul>
+        <p>Todos os direitos reservados - Harmony School 2024</p>
+    </footer>
+</body>
+</html>
 </body>
 </html>
