--- a/inicio.html
+++ b/inicio.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     integrity="sha384-G0IWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1btIQ6MLJuhea09">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="img/favicon_transparent_32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="img/favicon_transparent_32x32.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="#"><img src="img/Design sem nome.png" alt="Logo"></a>
+        <a href="#"><img src="img/default_transparent_1000x1000.png" alt="Logo"></a>
         <nav>
             <li><a href="inicio.html">Home</a></li>
             <li><a href="login.html">Login</a></li>
