--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/assets/login.css">
+    <link rel="shortcut icon" href="img/favicon_transparent_32x32.png" type="image/x-icon">
 </head>
 <body>
     <section class="area-login">
