--- a/cursos.html
+++ b/cursos.html
@@ -35,7 +35,9 @@
             tenetur voluptate laboriosam sed doloribus provident error sit.</h3>
         </div>
         <ul class="grid" style="background-image: url(img/cursos/madeira-empe.jpg);">
-            <div class="up" style="background-image: url(img/cursos/flauta.jpg);"></div>
+            <div class="up" style="background-image: url(img/cursos/flauta.jpg);">
+                <h3 style="position: absolute; display: flex;">sajdnaidiadhiauwhdiou</h3>
+            </div>
             <div class="up" style="background-image: url(img/cursos/guitarra.jpg);"></div>
             <div class="up" style="background-image: url(img/cursos/piano.jpg);"></div>
             <div class="up" style="background-image: url(img/cursos/sanfona.jpg);"></div>
@@ -57,9 +59,9 @@
     <footer>
         <ul>
             <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href=""><i class="fab fa-instagram"></i></i></i></a></li>
+            <li><a href="https://www.instagram.com/alex_vini01/"><i class="fab fa-instagram"></i></i></i></a></li>
             <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://github.com/LexCode20"><i class="fa-brands fa-github"></i></a></li>
         </ul>
         <p>Todos os direitos reservados - Harmony School 2024</p>
     </footer>
