--- a/inicio.html
+++ b/inicio.html
@@ -78,9 +78,9 @@
     <footer>
         <ul>
             <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href=""><i class="fab fa-instagram"></i></i></i></a></li>
+            <li><a href="https://www.instagram.com/alex_vini01/"><i class="fab fa-instagram"></i></i></i></a></li>
             <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://github.com/LexCode20"><i class="fa-brands fa-github"></i></a></li>
         </ul>
         <p>Todos os direitos reservados - Harmony School 2024</p>
     </footer>
