--- a/cadastro.html
+++ b/cadastro.html
@@ -69,7 +69,7 @@
         .inputUser:valid ~ .labelInput{
             top: -20px;
             font-size: 12px;
-            color: dodgerblue;
+            color: var(--color5);
         }
         #data_nascimento{
             border: none;
@@ -79,7 +79,7 @@
             font-size: 1.5vh;
         }
         #submit{
-            background-image: linear-gradient(to right,rgb(53, 173, 242),rgb(22, 17, 71));
+            background-image: linear-gradient(to right,#BA181B,#161A1D);
             width: 100%;
             border: none;
             padding: 1.5vh;
@@ -89,7 +89,7 @@
             border-radius: 1vh;
         }
         #submit:hover{
-            background-image: linear-gradient(to right,rgb(43, 141, 198),rgb(17, 13, 53));
+            background-image: linear-gradient(to right,#8a1214,#0b0d0f);
         }
     </style>
     <div class="box">
@@ -141,6 +141,7 @@
                 </div>
                 <br><br>
                 <input type="submit" name="submit" id="submit">
+                <br><br> 
             </fieldset>
         </form>
     </div>
