--- a/cursos.html
+++ b/cursos.html
@@ -36,15 +36,37 @@
         </div>
         <ul class="grid" style="background-image: url(img/cursos/madeira-empe.jpg);">
             <div class="up" style="background-image: url(img/cursos/flauta.jpg);">
-                <h3 style="position: absolute; display: flex;">sajdnaidiadhiauwhdiou</h3>
+                <h1>Curso de flauta</h1>
+                <h3>Lorem ipsum dsadasdasdsda</h3>
             </div>
-            <div class="up" style="background-image: url(img/cursos/guitarra.jpg);"></div>
-            <div class="up" style="background-image: url(img/cursos/piano.jpg);"></div>
-            <div class="up" style="background-image: url(img/cursos/sanfona.jpg);"></div>
-            <div class="down" style="background-image: url(img/cursos/saxofone.jpg);"></div>
-            <div class="down" style="background-image: url(img/cursos/vibra_slap.jpg);"></div>
-            <div class="down" style="background-image: url(img/cursos/violino.jpg);"></div>
-            <div class="down" style="background-image: url(img/cursos/violão.jpg);"></div>
+            <div class="up" style="background-image: url(img/cursos/guitarra.jpg);">
+                <h1>Curso de guitarra</h1>
+                <h3>sadefafaef</h3>
+            </div>
+            <div class="up" style="background-image: url(img/cursos/piano.jpg);">
+                <h1>Curso de Piano</h1>
+                <h3>adfeafdeada</h3>
+            </div>
+            <div class="up" style="background-image: url(img/cursos/sanfona.jpg);">
+                <h1>Curso de Sanfona</h1>
+                <h3>adsdasdawdawda</h3>
+            </div>
+            <div class="down" style="background-image: url(img/cursos/saxofone.jpg);">
+                <h1>Curso de Saxofone</h1>
+                <h3>adadadasdas</h3>
+            </div>
+            <div class="down" style="background-image: url(img/cursos/vibra_slap.jpg);">
+                <h1>Curso de Vibra Slap</h1>
+                <h3>qwdwadawdawd</h3>
+            </div>
+            <div class="down" style="background-image: url(img/cursos/violino.jpg);">
+                <h1>Curso de Violino</h1>
+                <h3>wefwfafada</h3>
+            </div>
+            <div class="down" style="background-image: url(img/cursos/violão.jpg);">
+                <h1>Curso de Violão</h1>
+                <h3>wadadaaefaesfea</h3>
+            </div>
         </ul>
     </section>
     <section class="newsletter">
